[package]
name = "cron_gate"
version = "0.1.0"
authors = ["miyanokomiya"]
edition = "2018"

[dependencies]
clap = { version = "2.33.0", optional = true }
regex = "1.1.6"
chrono = "0.4.6"
wasm-bindgen = "0.2.47"

[lib]
name = "cron_gate"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "cron_gate"
path = "src/main.rs"
required-features = ["bin"]

[features]
bin = ["clap"]
